# covid19-scraping-rust

./: .gitmodules  Cargo.toml  README.md
docs/: credits.md
src/: main.rs  structs.rs
src/structs/: app.rs  args.rs  mail_client.rs
