[package]
name = "covid19-scraping-rust"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.18.0", features = ["dates"] }
clap = { version = "3.2.12", features = ["derive"] }
chrono = "0.4.19"
data-formats = { version = "1.0.0", path = "./data-formats" }
imap = "2.4.1"
mail-parser = "0.5.0"
native-tls = "0.2.10"
oauth2 = "4.2.3"
openssl = { version = "0.10.41", features = ["vendored"] }
regex = "1.5.6"
serde = "1.0.139"
serde_json = "1.0.82"
